--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t RishiCghs/docker-react -f Dockerfile.dev .
+  - docker build -t rksingh007/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true RishiCghs/docker-react npm run test
+  - docker run -e CI=true rksingh007/docker-react npm run test
