--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,17 @@ before_install:
 
 script:
   - docker run -e CI=true rksingh007/docker-react npm run test
+
+
+deploy:
+  provider: elasticbeamstalk
+  region: "ap-southeast-1" 
+  app: "docker-react"
+  env: "Dockerreact-env"
+  bucket_name: "elasticbeanstalk-ap-southeast-1-744598775630"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_acces_key
+  scret_acces_key: "$AWS_scret_key"
+   
