--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ deploy:
   bucket_name: 'elasticbeanstalk-ap-southeast-1-744598775630'
   bucket_path: 'docker-react'
   on:
-    branch: main
+    branch: master
   access_key_id: $AWS_acces_key
   secret_access_key: $AWS_scret_key
